# theres-no-chance

./: .dockerignore  .env.supabase.local.example  .gitignore  AGENTS.md  Dockerfile  README.md  eslint.config.mjs  index.html  middleware.ts  notes.md  package-lock.json  package.json  proxy.ts  pyproject.toml  script.js  styles.css  tsconfig.public-barrels.json  vercel.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  market-research-runner.yml
app/: globals.css  layout.tsx  trade-interface.css
app/(auth)/: layout.tsx
app/(marketing)/: page.tsx
app/styles/: account.css  auth.css  base.css  community-resolve.css  (+7 more)
artifacts/: paper_loop_20250922T225812Z.jsonl
config/: demo.yml  production.yml
contracts/: public-barrels.contract.ts
docs/: BUILD_PLAN.md  CHANGE_HISTORY.md  DEPLOYMENT_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  MONITORING.md  TESTING.md  TRADING_IMPLEMENTATION.md  VENMO_GMAIL_PARSER_APPS_SCRIPT.md  VENMO_PAYMENTS_RUNBOOK.md
lib/: env.ts
ops/: disaster_recovery.md  evaluation_charter.md  monitoring_and_alerts.md  runbook.md  shadow_trading_runbook.md
public/: script.js
scripts/: analyze_post_trade.py  auto_paper.py  backtest.py  backup_ledger.py  control_panel.py  demo_runner.py  market-research-runner.ts  restore_ledger_from_backup.py  run_backtests.py  shadow_runner.py  supabase-safe.sh
tests/: test_backtest.py  test_config_loader.py  test_edge_engine.py  test_execution_service.py  test_kalshi_client.py  test_quant_fusion.py  test_research_agent.py  test_risk_manager.py  test_state_ledger.py  test_trading_app_e2e.py
(+316 files in other folders)
